--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-
+  <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<title>2016 Atlanta Falcons </title>
+<style type="text/css">
+</style>
+</head>
+<IMG src= "JulioBanner.jpg" alt= "A picture of me!">
+<h1 STYLE= "text-align:center"> Atlanta Falcons 2016 Season </h1>
+<body>
+<p>The 2016 Atlanta Falcons </p>
+</body>
+</html>
