--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </style>
 </head>
 <IMG src= "JulioBanner.jpg" alt= "A picture of me!">
-<h1 STYLE= "text-align:center"> Atlanta Falcons 2016 Season </h1>
+<h1 STYLE= "text-align:center;border:2px solid Tomato;"> Atlanta Falcons 2016 Season </h1>
 <body>
 <p>The 2016 Atlanta Falcons </p>
 </body>
