--- a/index.html
+++ b/index.html
@@ -6,9 +6,39 @@
 <style type="text/css">
 </style>
 </head>
-<IMG src= "JulioBanner.jpg" alt= "A picture of me!">
 <h1 STYLE= "text-align:center;border:2px solid Tomato;"> Atlanta Falcons 2016 Season </h1>
 <body>
-<p>The 2016 Atlanta Falcons </p>
+<p><h3>The 2016 Atlanta Falcons were one of the most prolific NFL offenses of this century. The team ended up losing in a memorable fashion in the Super Bowl. </h3></p>
+
+<style>
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+th, td {
+    padding: 5px;
+    text-align: left;
+}
+</style>
+</head>
+<body>
+
+<h2>Schedule</h2>
+
+<table style="width:100%">
+  <caption>Monthly savings</caption>
+  <tr>
+    <th>Week</th>
+    <th>Score</th>
+  </tr>
+  <tr>
+    <td>Week 1 vs.</td>
+    <td>$100</td>
+  </tr>
+  <tr>
+    <td>Week 2 vs.</td>
+    <td>$50</td>
+  </tr>
+</table>
 </body>
 </html>
