--- a/index.html
+++ b/index.html
@@ -32,13 +32,72 @@ th, td {
     <th>Score</th>
   </tr>
   <tr>
-    <td>Week 1 vs.</td>
-    <td>$100</td>
+    <td>Week 1 vs. Tampa Bay</td>
+    <td>24-31 (0-1)</td>
   </tr>
   <tr>
-    <td>Week 2 vs.</td>
-    <td>$50</td>
+    <td>Week 2 at Oakland</td>
+    <td>35-28 (1-1)</td>
   </tr>
+  <tr>
+    <td>Week 3 at New Orleans</td>
+    <td>45-32 (2-1)</td>
+  </tr>
+  <tr>
+    <td>Week 4 vs Carolina</td>
+    <td>48-33 (3-1)</td>
+  </tr>
+  <tr>
+    <td>Week 5 at Denver</td>
+    <td>23-16 (4-1)</td>
+  </tr>
+  <tr>
+    <td>Week 6 at Seattle</td>
+    <td>24-26 (4-2)</td>
+  </tr>
+  <tr>
+    <td>Week 7 vs. San Diego</td>
+    <td>30-33 (4-3)</td>
+  </tr>
+  <tr>
+    <td>Week 8 vs Green Bay</td>
+    <td>33-32 (5-3)</td>
+  </tr>
+  <tr>
+    <td>Week 9 at Bucaneers</td>
+    <td>43-28 (6-3)</td>
+  </tr>
+  <tr>
+    <td>Week 10 at Philadelphia</td>
+    <td>15-24 (6-4)</td>
+  </tr>
+  <tr>
+    <td>Week 11 BYE WEEK</td>
+    <td></td>
+  </tr>
+  <tr>
+    <td>Week 12 vs Arizona</td>
+    <td>38-19 (7-4)</td>
+  </tr>
+  <tr>
+    <td>Week 13 vs. Kansas City</td>
+    <td>28-29 (7-5)</td>
+  </tr>
+  <tr>
+    <td>Week 14 at Los Angeles</td>
+    <td>42-14 (8-5)</td>
+  </tr>
+  <tr>
+    <td>Week 15 vs. San Francisco</td>
+    <td>41-13 (9-5)</td>
+  </tr>
+  <tr>
+    <td>Week 16 at Carolina</td>
+    <td>33-16 (10-5)</td>
+  </tr>
+  <tr> 
+  	<td>Week 17 vs. New Orleans</td> 
+    <td>38-32 (11-5)</td>
 </table>
 </body>
 </html>
