--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <h1 STYLE= "text-align:center;border:2px solid Tomato;"> Atlanta Falcons 2016 Season </h1>
 <body>
+
+<img src="Celebration.gif" alt="Celebration" style="width:600px;height:400px;">
+
 <p><h3>The 2016 Atlanta Falcons were one of the most prolific NFL offenses of this century. The team ended up losing in a memorable fashion in the Super Bowl. </h3></p>
 
 <style>
