--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 <p><h3>The 2016 Atlanta Falcons were one of the most prolific NFL offenses of this century. The team ended up losing in a memorable fashion in the Super Bowl. </h3></p>
 
+<br>
+
+
 <style>
 table, th, td {
     border: 1px solid black;
@@ -102,5 +105,12 @@ th, td {
   	<td>Week 17 vs. New Orleans</td> 
     <td>38-32 (11-5)</td>
 </table>
+<br>
+<br> 
+
+<p><h3>The Falcons got off to a rough start losing at home to the Tampa Bay Buccaneers, but they recovered by winning four straight games. After dropping two in a row, they strung togther an 11-5 record. What was most impressive was the offensive numbers that the Falcons were able to produce. They scored 33.8 points per game, <a href="https://www.sportingcharts.com/stats/nfl/all-time/most-points-scored-by-an-nfl-team-in-a-season.aspx">which ranked 8th of all time in NFL history.</a> 
+
+</table>
 </body>
 </html>
+
