--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <title>2016 Atlanta Falcons </title>
 <style type="text/css">
+body {
+    
+}
 </style>
 </head>
 <h1 STYLE= "text-align:center;border:2px solid Tomato;"> Atlanta Falcons 2016 Season </h1>
@@ -113,4 +116,5 @@ th, td {
 </table>
 </body>
 </html>
+
 
